major progress in ConsoleUiManager and Engine classes - before submission and before deleting unnecessary comment